2018-06-20      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/g-mode.el:  fixed traditional mode.  Both algol
	  mode and traditional are now usable and user selectable.

2018-06-13      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/g-mode.el:  added ability to turn on/off
          lowercase algol style keyword transformation.
          Fixed compile-command.
	* gm2/el/gm2-mode.el:  renamed from g-mode.el.
	  Changed internal variables from g-mode- to m2-auto-.

2018-06-11      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/g-mode.el:  added defcustom declarations
          and fixed some regexp bugs.  Applied some defcustom
          implementation features.
	* gm2/el/g-mode.el:  fixed electric END, ELSE and THEN.
          Added more defcustoms.
	* gm2/el/g-mode.el:  added many more defcustoms.  Also
          tidied up code and also tightened up types and introduced
          radio buttons for language choice.  Use inbuilt booleans
          for binary choices.  Fixed key binding for DEL and
	  Backspace.

2018-06-08      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/g-mode.el:  interim checkin, keyword editing
          complete (minus delete key).

2018-06-07      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/g-mode.el:  interim checkin.
	* gm2/el/g-mode.el:  another interim checkin in
	  the development of lowercase keywords.

2018-05-24      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-gcc/m2expr.c:  (BuildNotEqualToZero)
          new function.  (checkWholeNegateOverflow)
          re-implemented and in the process fixed bug
	  and the test
          testsuite/gm2/switches/check-all/run/fail/intrange5.mod
	  passes.
          (m2expr_Build4LogicalAnd)  New function.
	* gm2/gm2-gcc/m2expr.c:  renamed BuildLogicalAndIf
          to BuildTruthAndIf and renamed BuildLogicalOrIf
	  to BuildTruthOrIf.

2018-05-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>
